--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     </div>
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth Is Out There</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -32,37 +32,32 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
-                <form>
-                    <p>Filter search</p>
-                </form>
-                <ul class="list-group">
-                    <li class="list-group-item">
+          <div class="col-md-3">
+            <form class="bg-dark">
+                <p>Filter Search</p>
+                <ul class="list-group bg-dark">
+                    <li class="list-group-item bg-dark">
                         <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
-
-                    </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-
+                        <input type="text" placeholder="1/1/2010" id="datetime" />
+                        <button id="filter-btn" type="submit" class="btn btn-default">Filter Table</button>
                     </li>
                 </ul>
-
-            </div>
-            <div class="col-md-9">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>City</th>
-                            <th>State</th>
-                            <th>Country</th>
-                            <th>Shape</th>
-                            <th>Duration</th>
-                            <th>Comments</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
+            </form>
+        </div>
+        <div class="col-md-9">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>City</th>
+                        <th>State</th>
+                        <th>Country</th>
+                        <th>Shape</th>
+                         <th>Duration</th>
+                        <th>Comments</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
                 </table>
             </div>
         </div>
